--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "app": "^0.1.0",
     "axios": "^1.6.2",
+    "bootstrap": "^5.3.2",
+    "create-react": "^0.0.0",
     "create-react-app": "^5.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
